[package]
name              = "cave-home-display"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-display — TV/display integration (LG webOS, Samsung Tizen, Android TV/Cast) + Portal wall-panel render mode; upstream: HA TV integrations (Apache-2.0); port method: line-by-line + first-party wall-panel mode (ADR-028)"

[package.metadata.cave-home]
upstream    = "home-assistant/core (webostv, samsungtv, androidtv, cast) + first-party Portal wall-panel mode"
port-method = "line-by-line + first-party"
adr         = "ADR-028"

[lints]
workspace = true
