[package]
name              = "cave-home-dns-unbound"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-dns-unbound — recursive DNS resolver (Unbound BSD line-by-line); upstream: NLnetLabs/unbound (BSD-3-Clause); port method: line-by-line (ADR-022)"

[package.metadata.cave-home]
upstream    = "NLnetLabs/unbound"
port-method = "line-by-line"
adr         = "ADR-022"

[lints]
workspace = true
