[package]
name              = "cave-home-dns-unbound"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-dns-unbound — local DNS resolution-decision core (local-zone / forward / access-control / TTL cache); upstream: NLnetLabs/unbound (BSD-3-Clause); port method: spec-based from unbound.conf(5) + DNS RFCs (ADR-022)"

[package.metadata.cave-home]
upstream    = "NLnetLabs/unbound"
port-method = "spec-based"
adr         = "ADR-022"

[lints]
workspace = true
