[package]
name              = "cave-home-esphome"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-esphome — ESPHome native-API protocol codec: the pure-logic, std-only wire engine (plaintext frame framing + base-128 varint + message-type registry + FNV-1 entity keys) cave-home uses to talk to ESPHome devices. Behavioural reimplementation of the PUBLIC native-API protocol; ESPHome firmware (GPL-3.0) NOT read."

[package.metadata.cave-home]
upstream     = "ESPHome native-API protocol — public api.proto message IDs + plaintext frame format; aioesphomeapi (MIT) public client behaviour referenced. ESPHome firmware C++ (GPL-3.0) NOT read."
port-method  = "behavioural-reimplementation (public ESPHome native-API plaintext wire format) + spec-based (protobuf base-128/LEB128 varint)"
adr          = "ADR-032"

[package.metadata.clean-room]
component         = "ESPHome firmware compiler / YAML config / on-device drivers (the device side)"
reason            = "The esphome/esphome firmware + codegen is GPL-3.0 (NOT read — clean-room recusal); license-incompatible with cave-home Apache-2.0. cave-home is the HUB; it needs to SPEAK the native API, not BE an ESPHome firmware."
spec-source       = "Public native-API wire format (plaintext frame: 0x00 preamble + varint length + varint type + payload) and the public api.proto message-ID table; aioesphomeapi (MIT) public client behaviour."
prohibited-source = ["esphome/esphome firmware C++ (GPL-3.0, clean-room — NOT read)", "ESPHome Python codegen (GPL-3.0, clean-room — NOT read)"]
attestation       = "No esphome/esphome GPL-3.0 firmware or codegen source was ever read / consulted (clean-room). Protocol facts (frame layout, varint, message IDs) are from the public api.proto and the MIT aioesphomeapi client."

# Phase-1 MVP is pure logic: std-only, no external crates, no network/TLS/Noise.
# The TCP transport, Noise (encrypted) frame helper, full protobuf message bodies,
# OTA, bluetooth-proxy and cave-home-core integration are Phase-1b/Phase-2 (manifest).
[dependencies]

[dev-dependencies]

[lints]
workspace = true
