[package]
name              = "cave-home-free-home"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-free-home — Busch-Jaeger free@home domain model + datapoint engine (topology, function/pairing roles, value codec, command validation, device-kind mapping, EN/DE/TR UX). Pure logic; SysAP REST/WebSocket transport deferred. ADR-011."

[package.metadata.cave-home]
upstream    = "first-party (free@home public local System Access Point API semantics + HA free@home integration behaviour)"
port-method = "spec-based"
adr         = "ADR-011"

[dependencies]

[dev-dependencies]

[lints]
workspace = true
