[package]
name              = "cave-home-garden"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-garden — garden / outdoor (Husqvarna Automower, Worx Landroid, soil-moisture sensors, weather stations); upstream: HA garden-class integrations (Apache-2.0); port method: line-by-line (ADR-029)"

[package.metadata.cave-home]
upstream    = "home-assistant/core (husqvarna_automower, worx_landroid, weather integrations)"
port-method = "line-by-line"
adr         = "ADR-029"

[lints]
workspace = true
