[package]
name              = "cave-home-history"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-history — time-series history processing engine (aggregation, statistics, retention/roll-up, chart decimation, state-history); on-disk storage engine deferred to phase-1b (ADR-023)"

[package.metadata.cave-home]
upstream    = "influxdata/influxdb (MIT, embedded default) + timescale/timescaledb (Apache, opt-in) + VictoriaMetrics/VictoriaMetrics (Apache, opt-in)"
port-method = "spec-based (analytics engine) + line-by-line (storage layer, deferred)"
adr         = "ADR-023"

[lints]
workspace = true
