[package]
name              = "cave-home-household"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-household — household management (Grocy port: food/medicine/battery inventory, chores, shopping list); upstream: grocy/grocy (MIT); port method: line-by-line (ADR-026)"

[package.metadata.cave-home]
upstream    = "grocy/grocy"
port-method = "line-by-line"
adr         = "ADR-026"

[lints]
workspace = true
